FInal css & js cancelreserv

--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -29,35 +29,11 @@
     <link rel="manifest" href="manifest.json" />
     <link rel="shortcut icon" href="images/logos/favicons/favicon.ico" />
 
+    <!-- Styles -->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <style>
-      .language-selector {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        z-index: 1000;
-        background: rgba(255, 255, 255, 0.95);
-        border-radius: 8px;
-        padding: 8px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        backdrop-filter: blur(10px);
-      }
-      .language-selector select {
-        border: none;
-        background: transparent;
-        font-size: 14px;
-        font-weight: 600;
-        color: #374151;
-        cursor: pointer;
-        padding: 4px 8px;
-        border-radius: 4px;
-      }
-      .language-selector select:focus {
-        outline: none;
-        background: rgba(59, 130, 246, 0.1);
-      }
-    </style>
     <link rel="stylesheet" href="assets/css/custom.css" />
+    <link rel="stylesheet" href="assets/css/reservation-common.css" />
+    <link rel="stylesheet" href="assets/css/reservation-system.css" />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
@@ -65,68 +41,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <style>
-      .form-section {
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 20px;
-        padding: 20px;
-        box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
-        backdrop-filter: blur(20px);
-        border: 1px solid rgba(255, 255, 255, 0.3);
-      }
-      .warning {
-        background: rgba(255, 193, 7, 0.15);
-        border: 1px solid rgba(255, 193, 7, 0.4);
-        border-radius: 10px;
-        padding: 12px;
-        color: #2d2d2d;
-      }
-      .btn-submit {
-        background: linear-gradient(135deg, #ef4444, #dc2626);
-        color: white;
-        padding: 14px 24px;
-        border: none;
-        border-radius: 12px;
-        font-weight: 600;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 50px;
-        box-shadow: 0 6px 20px rgba(239, 68, 68, 0.3);
-      }
-      textarea {
-        width: 100%;
-        border-radius: 10px;
-        padding: 12px;
-        border: 1px solid rgba(255, 255, 255, 0.4);
-        background: rgba(255, 255, 255, 0.9);
-        color: #111827;
-      }
-      textarea::placeholder {
-        color: #374151 !important;
-        opacity: 1 !important;
-      }
-      textarea::-webkit-input-placeholder {
-        color: #374151 !important;
-        opacity: 1 !important;
-      }
-      textarea::-moz-placeholder {
-        color: #374151 !important;
-        opacity: 1 !important;
-      }
-      textarea:-ms-input-placeholder {
-        color: #374151 !important;
-        opacity: 1 !important;
-      }
-      .panel.color4-alt .inner {
-        max-width: 980px;
-      }
-      .panel.color4-alt .inner .form-section {
-        max-width: 720px;
-        margin: 0 auto;
-      }
-    </style>
   </head>
   <body class="is-preload">
     <!-- Sélecteur de langue -->
@@ -238,378 +152,12 @@
       </div>
     </div>
 
+    <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/translations.js"></script>
-    <script>
-      // ============================================================================
-      // SYSTÈME DE TRADUCTION POUR ANNULER-RESERVATION.HTML
-      // ============================================================================
-
-      let currentLang = 'fr'
-
-      // Fonction pour traduire la page
-      function translatePage(lang) {
-        currentLang = lang
-        const t = window.translations[lang]['annuler-reservation']
-        const common = window.translations[lang].common
-
-        // Mettre à jour le titre de la page
-        document.title = t.title
-
-        // Traduire la bannière
-        document.getElementById('banner-title').textContent = t.banner.title
-        document.getElementById('banner-subtitle').textContent =
-          t.banner.subtitle
-        document.getElementById('banner-description').textContent =
-          t.banner.description
-        document.getElementById('banner-button').textContent = t.banner.button
-
-        // Traduire la section récapitulatif
-        document.getElementById('recap-title').textContent = t.recap.title
-        document.getElementById('recap-loading').textContent = t.recap.loading
-
-        // Traduire la section formulaire
-        document.getElementById('form-title').textContent = t.form.title
-        document.getElementById('policy-loading').textContent = t.form.loading
-        document.getElementById('reason-label').textContent =
-          t.form.reason_label
-        document.getElementById('reason').placeholder =
-          t.form.reason_placeholder
-        document.getElementById('submit-button-text').textContent =
-          t.form.submit_button
-
-        // Traduire la modal de confirmation (sera créée dynamiquement)
-        setTimeout(() => {
-          const confirmBox = document.querySelector('.confirm-box')
-          if (confirmBox) {
-            confirmBox.querySelector('h4').textContent = t.confirmation.title
-            confirmBox.querySelector('p').textContent = t.confirmation.message
-            document.querySelector('#co-cancel').textContent =
-              t.confirmation.cancel
-            document.querySelector('#co-confirm').textContent =
-              t.confirmation.confirm
-          }
-        }, 100)
-
-        // Mettre à jour le sélecteur de langue
-        if (document.querySelector('#language-selector')) {
-          document.querySelector('#language-selector').value = lang
-        }
-
-        // Mettre à jour l'URL avec la nouvelle langue
-        const url = new URL(window.location)
-        url.searchParams.set('lang', lang)
-        window.history.replaceState({}, '', url)
-
-        // Mettre à jour le récapitulatif si les données sont déjà chargées
-        updateTranslationsAfterLoad()
-      }
-
-      // Fonction pour traduire les éléments dynamiques du récapitulatif
-      function translateRecapContent(data, lang) {
-        const common = window.translations[lang].common
-        const fmtMoney = (v) =>
-          Number(v || 0).toLocaleString(
-            lang === 'de' ? 'de-DE' : lang === 'en' ? 'en-GB' : 'fr-FR',
-            {
-              minimumFractionDigits: 2,
-              maximumFractionDigits: 2
-            }
-          )
-        const s = new Date(data.startDate)
-        const e = new Date(data.endDate)
-        const fmtDate = (dt) =>
-          dt.toLocaleDateString(
-            lang === 'de' ? 'de-DE' : lang === 'en' ? 'en-GB' : 'fr-FR',
-            {
-              day: '2-digit',
-              month: 'long',
-              year: 'numeric'
-            }
-          )
-
-        const lines = []
-        lines.push(
-          `<div class="detail-item"><strong>${
-            common.dates
-          }</strong><span>${fmtDate(s)} ${
-            lang === 'de' ? 'bis' : lang === 'en' ? 'to' : 'au'
-          } ${fmtDate(e)} (${data.nbNights} ${common.nights})</span></div>`
-        )
-
-        const adultText =
-          data.nbAdults > 1 ? common.adults_plural : common.adults
-        const childText =
-          data.nbChilds > 1 ? common.children_plural : common.children
-        lines.push(
-          `<div class="detail-item"><strong>${common.travelers}</strong><span>${
-            data.nbAdults
-          } ${adultText}${
-            data.nbChilds > 0 ? `, ${data.nbChilds} ${childText}` : ''
-          }</span></div>`
-        )
-
-        lines.push(
-          `<div class="detail-item" style="border-bottom:none; display:block; padding-bottom:0;">
-            <div><strong>${common.price_details}</strong></div>
-            <div style="padding-top:8px">• ${common.nights_total.replace(
-              '{count}',
-              data.nbNights
-            )} ${fmtMoney(data.priceNights)} ${common.currency}</div>
-            <div>• ${common.cleaning_fees} ${fmtMoney(data.priceClean)} ${
-            common.currency
-          }</div>
-            <div>• ${common.taxes
-              .replace('{count}', data.nbAdults)
-              .replace('{adult_text}', adultText)} ${fmtMoney(data.priceTax)} ${
-            common.currency
-          }</div>
-            <div>• <strong>${common.total} ${fmtMoney(data.priceTotal)} ${
-            common.currency
-          }</strong></div>
-          </div>`
-        )
-
-        return (
-          lines.join('') +
-          `<div class="pills">
-             <span class="pill ${data.depositAmount > 0 ? 'green' : 'red'}">${
-            data.depositAmount > 0 ? '✅' : '❌'
-          } ${common.deposit} ${fmtMoney(data.depositAmount)} ${
-            common.currency
-          }</span>
-             <span class="pill ${
-               data.status === 'balancePay' ? 'green' : 'red'
-             }">${data.status === 'balancePay' ? '✅' : '❌'} ${
-            common.balance
-          } ${fmtMoney(data.balanceAmount || 0)} ${common.currency}</span>
-           </div>`
-        )
-      }
-
-      // Initialiser les traductions
-      window.addEventListener('translations:ready', function (event) {
-        const detectedLang = event.detail.language
-        translatePage(detectedLang)
-      })
-
-      // Gérer le changement de langue
-      document.addEventListener('DOMContentLoaded', function () {
-        const languageSelector = document.querySelector('#language-selector')
-        if (languageSelector) {
-          languageSelector.addEventListener('change', function () {
-            const newLang = this.value
-
-            // Sauvegarder la préférence
-            localStorage.setItem('calypso-bay-lang', newLang)
-
-            // Rediriger vers la nouvelle URL avec le bon paramètre de langue
-            const url = new URL(window.location)
-            url.searchParams.set('lang', newLang)
-            window.location.href = url.toString()
-          })
-
-          // Charger la préférence sauvegardée
-          const savedLang = localStorage.getItem('calypso-bay-lang')
-          if (savedLang && ['fr', 'en', 'de'].includes(savedLang)) {
-            languageSelector.value = savedLang
-            // Ne pas appeler translatePage ici, la page se chargera avec la bonne langue
-          }
-        }
-      })
-
-      // ============================================================================
-      // LOGIQUE EXISTANTE DE LA PAGE
-      // ============================================================================
-
-      const params = new URLSearchParams(window.location.search)
-      const token = params.get('token')
-      const policyBox = document.getElementById('policy')
-      const btn = document.getElementById('cancel-btn')
-
-      // Styles minimaux pour la carte récap et pastilles
-      const style = document.createElement('style')
-      style.textContent = `
-        .recap-card { color:#fff; }
-        .detail-item{ display:flex; justify-content:space-between; align-items:flex-start; gap:16px; padding:10px 0; border-bottom:1px solid rgba(255,255,255,0.25); }
-        .detail-item:last-child{ border-bottom:none; }
-        .detail-item strong{ font-weight:700; }
-        .pills{ margin-top:12px; display:flex; gap:8px; flex-wrap:wrap; }
-        .pill{ padding:6px 10px; border-radius:8px; font-weight:600; }
-        .pill.green{ background:rgba(16,185,129,.18); border:1px solid rgba(16,185,129,.45); }
-        .pill.red{ background:rgba(239,68,68,.18); border:1px solid rgba(239,68,68,.45); }
-        .confirm-overlay{ position:fixed !important; inset:0; background:rgba(0,0,0,.35); backdrop-filter: blur(3px); display:none; align-items:center; justify-content:center; z-index: 999999; }
-        .confirm-box{ background: rgba(255,255,255,0.95); padding:20px; border-radius:14px; max-width: 460px; width: calc(100% - 40px); box-shadow:0 10px 30px rgba(0,0,0,0.25); }
-        .confirm-box h4{ margin:0 0 8px 0; color:#111827; }
-        .confirm-actions{ display:flex; gap:10px; justify-content:flex-end; margin-top:14px; }
-        .btn{ border:none; border-radius:10px; padding:12px 18px; font-weight:600; cursor:pointer; display:flex; align-items:center; justify-content:center; min-height:44px; font-size:14px; transition:all 0.2s ease; }
-        .btn.cancel{ background:#d1d5db; color:#111827; border:1px solid #9ca3af; font-weight:700; }
-        .btn.cancel:hover{ background:#9ca3af; color:#000; }
-        .btn.danger{ background:linear-gradient(135deg,#ef4444,#dc2626); color:#fff; box-shadow:0 2px 8px rgba(239,68,68,0.3); }
-        .btn.danger:hover{ background:linear-gradient(135deg,#dc2626,#b91c1c); transform:translateY(-1px); box-shadow:0 4px 12px rgba(239,68,68,0.4); }
-      `
-      document.head.appendChild(style)
-
-      // Overlay de confirmation
-      const overlay = document.createElement('div')
-      overlay.className = 'confirm-overlay'
-      overlay.id = 'confirm-overlay'
-      overlay.innerHTML = `
-        <div class="confirm-box">
-          <h4 id="confirm-title">Confirmer l'annulation ?</h4>
-          <p style="margin:0;color:#374151" id="confirm-message">Êtes-vous sûr de vouloir envoyer une demande d'annulation pour cette réservation ?</p>
-          <div class="confirm-actions">
-            <button class="btn cancel" id="co-cancel">Annuler</button>
-            <button class="btn danger" id="co-confirm">Confirmer l'annulation</button>
-          </div>
-        </div>`
-      document.body.appendChild(overlay)
-
-      async function load() {
-        if (!token) {
-          const t = window.translations[currentLang]['annuler-reservation']
-          policyBox.innerHTML = `<span>${t.errors.missing_token}</span>`
-          btn.disabled = true
-          return
-        }
-        try {
-          const res = await fetch(
-            `/api/reservations?action=get&token=${encodeURIComponent(token)}`
-          )
-          const json = await res.json()
-          if (json.status !== 'success') {
-            const t = window.translations[currentLang]['annuler-reservation']
-            policyBox.innerHTML = `<span>${
-              json.message || t.errors.reservation_not_found
-            }</span>`
-            btn.disabled = true
-            return
-          }
-          const d = json.data
-          // Sauvegarder les données pour les traductions
-          window.reservationData = d
-
-          // Récapitulatif complet avec traductions
-          const recapEl = document.getElementById('reservation-recap')
-          const recapBalanceAmount = Number(
-            d.balanceAmount ||
-              Math.max(
-                0,
-                Number(d.priceTotal || 0) - Number(d.depositAmount || 0)
-              )
-          )
-          const dataForRecap = { ...d, balanceAmount: recapBalanceAmount }
-          recapEl.innerHTML = translateRecapContent(dataForRecap, currentLang)
-
-          const start = new Date(d.startDate)
-          const now = new Date()
-          const diffDays = Math.ceil((start - now) / (1000 * 60 * 60 * 24))
-          const t = window.translations[currentLang]['annuler-reservation']
-
-          // Déterminer le message de politique selon les conditions
-          let msg
-          const depositAmount = Number(d.depositAmount || 0)
-          const balanceAmount = Number(d.balanceAmount || 0)
-          const hasDeposit = depositAmount > 0
-          const hasBalance = balanceAmount > 0
-          const isMoreThan3Months = diffDays >= 90
-
-          if (!hasDeposit) {
-            // Acompte non payé
-            msg = t.policy.no_deposit
-          } else if (hasDeposit && !hasBalance) {
-            // Acompte payé mais pas le solde
-            if (isMoreThan3Months) {
-              msg = t.policy.free_cancellation_deposit_only
-            } else {
-              msg = t.policy.deposit_retained
-            }
-          } else if (hasDeposit && hasBalance) {
-            // Acompte et solde payés
-            if (isMoreThan3Months) {
-              msg = t.policy.free_cancellation_full_payment
-            } else {
-              msg = t.policy.deposit_retained_balance_refunded
-            }
-          }
-
-          // Désactiver le bouton si pas d'acompte
-          if (!hasDeposit) {
-            btn.disabled = true
-            policyBox.classList.add('error')
-          } else {
-            btn.disabled = false
-            policyBox.classList.remove('error')
-          }
-
-          policyBox.innerHTML = `<span>${msg}</span>`
-          // Style léger sur le paragraphe politique
-          policyBox.style.color = '#fff'
-          policyBox.style.opacity = '0.95'
-        } catch (e) {
-          const t = window.translations[currentLang]['annuler-reservation']
-          policyBox.innerHTML = `<span>${t.errors.loading_error}</span>`
-        }
-      }
-
-      // Fonction pour mettre à jour les traductions après chargement des données
-      function updateTranslationsAfterLoad() {
-        if (window.reservationData) {
-          const recapEl = document.getElementById('reservation-recap')
-          if (recapEl && !recapEl.textContent.includes('Chargement')) {
-            const balanceAmount = Number(
-              window.reservationData.balanceAmount ||
-                Math.max(
-                  0,
-                  Number(window.reservationData.priceTotal || 0) -
-                    Number(window.reservationData.depositAmount || 0)
-                )
-            )
-            const dataForRecap = { ...window.reservationData, balanceAmount }
-            recapEl.innerHTML = translateRecapContent(dataForRecap, currentLang)
-          }
-        }
-      }
-
-      load()
-
-      btn.addEventListener('click', async () => {
-        if (!token) return
-        // Ouvrir l'overlay de confirmation
-        document.getElementById('confirm-overlay').style.display = 'flex'
-        const closeOverlay = () => {
-          document.getElementById('confirm-overlay').style.display = 'none'
-        }
-        document.getElementById('co-cancel').onclick = closeOverlay
-        document.getElementById('co-confirm').onclick = async () => {
-          closeOverlay()
-          btn.disabled = true
-          const t = window.translations[currentLang]['annuler-reservation']
-          document.getElementById('submit-button-text').textContent =
-            t.status.sending
-          try {
-            const reason = document.getElementById('reason').value
-            const resp = await fetch('/api/reservations?action=cancel', {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ token, reason })
-            })
-            const json = await resp.json()
-            if (!resp.ok || json.status !== 'success')
-              throw new Error(json.error || json.message || 'Erreur')
-            document.getElementById('submit-button-text').textContent =
-              t.status.sent
-          } catch (e) {
-            alert(e.message)
-            btn.disabled = false
-            document.getElementById('submit-button-text').textContent =
-              t.form.submit_button
-          }
-        }
-      })
-    </script>
+    <script src="assets/js/reservation-system.js"></script>
   </body>
 </html>
